# Django_webASD

./: README.md  main.py  manage.py  pyproject.toml
po6/: admin.py  apps.py  forms.py  models.py  test.py  urls.py  views.py
po6/classViews/: __init__.py  getCumulativeReportPage.py  getReport.py  getReport17.py  getReportDSK.py  getShiftReportPage.py  getShovOverExcavation.py  getYearsReportPage.py  insertDataPage.py  mainView.py  takeDataPage.py
po6/helpers/: __init__.py  insertXL.py  querys.py  statics.py  test_bd.py
po6/migrations/: 0001_initial.py  0002_redistribution_alter_profile_options_and_more.py  0003_profile_addr.py
po6/static/: PO6.xlsx  PO6_day.xlsx  PO6_old.xlsx  ReportDSK.xlsx  ReportWalkingCrew.xlsx  report.xlsx
po6/static/po6/css/: custom.css
po6/static/po6/js/: bootstrap.popper.min.js
po6/templates/: get_17_overexc_insert.html  get_cumulative_report_page.html  get_overexc.html  get_report_17.html  get_report_DSK.html  get_report_page.html  get_shift_report_page.html  get_years_report_page.html  half_year.html  home.html  include_block.html  input_hour_row.html  input_minute_row.html  input_volume_row.html  insert_17_overexc.html  insert_data_page.html  insert_fail_page.html  insert_po6.html  insert_success_page.html  karier.html  main.html  modal.html  month_06.html  month_12.html  nav.html  po6.html  quarter_year.html  shovel.html  take_data_page.html
webASD/: asgi.py  settings.py  urls.py  wsgi.py
