[project]
name = "webasd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "asgiref==3.8.1",
    "babel==2.16.0",
    "beautifulsoup4==4.12.2",
    "certifi==2023.7.22",
    "cffi==1.16.0",
    "chardet==5.2.0",
    "charset-normalizer==3.2.0",
    "colorama==0.4.6",
    "cryptography==41.0.7",
    "cssutils==2.7.1",
    "currency-symbols==2.0.3",
    "django==5.1.1",
    "django-bootstrap5==24.3",
    "engineering-notation==0.10.0",
    "et-xmlfile==1.1.0",
    "fonttools==4.42.1",
    "idna==3.4",
    "numpy>=2.4.4",
    "openpyxl==3.1.2",
    "oracledb==2.0.1",
    "packaging==24.1",
    "pandas>=3.0.2",
    "pefile==2024.8.26",
    "pillow==10.0.0",
    "pycparser==2.21",
    "pyinstaller==6.10.0",
    "pyinstaller-hooks-contrib==2024.8",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "pytz==2023.3",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "six==1.16.0",
    "soupsieve==2.4.1",
    "sqlparse==0.5.1",
    "tk-tools==0.16.0",
    "tkcalendar==1.6.1",
    "tzdata==2023.3",
    "urllib3==2.0.4",
    "webcolors==1.13",
    "xlrd==2.0.1",
    "xls2xlsx==0.2.0",
    "xlwt==1.3.0",
]
